# gfo

./: README.md  flake.nix  formatcode.sh  gfo.cabal
src/: GFO.hs
test/: Main.hs
